<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_ico"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_ico"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/add_ico"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_rescue"
        android:icon="@drawable/rescue_ico"
        android:title="@string/title_rescue" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_ico"
        android:title="@string/title_profile" />



</menu>